--- a/site.conf
+++ b/site.conf
@@ -221,8 +221,8 @@ aus und sende es ab.
 ]],
     msg_pubkey = [[
 Dies ist der öffentliche Schlüssel deines Freifunk-Knotens. Erst nachdem
-er auf den Servern des Freifunk SaarLorLux-Projektes eingetragen wurde,
-kann sich dein Knoten mit dem Luxemburgischen Mesh-VPN zu verbinden. Bitte
+er auf den Servern des Freifunk Luxembourg-Projektes eingetragen wurde,
+kann sich dein Knoten mit dem luxemburgischen Mesh-VPN verbinden. Bitte
 schicke dazu diesen Schlüssel und den Namen deines Knotens
 (<em><%=hostname%></em>) an
 <a href="mailto:freifunk-vpn@saar.freifunk.net">freifunk-vpn@saar.freifunk.net</a>. 
