--- a/site.conf
+++ b/site.conf
@@ -30,7 +30,7 @@
     channel = 1,
 
     -- ESSID used for client network.
-    ssid = 'lux.freifunk.net',
+    ssid = 'luxembourg.freifunk.net',
 
     -- Specifies the channel width in 802.11n and 802.11ac mode.
     -- Possible values are:
@@ -51,7 +51,7 @@
   -- This should be equal to the 2.4 GHz variant, except
   -- for channel and htmode.
   wifi5 = {
-    ssid = 'lux.freifunk.net',
+    ssid = 'luxembourg.freifunk.net',
     channel = 36,
     htmode = 'HT40+',
     mesh_ssid = '5e:ba:7a:d2:c4:bb',
@@ -119,9 +119,9 @@
 
         -- List of mirrors to fetch images from. IPv6 required!
         mirrors = {
-          'http://static.services.ffsaar/firmware-lux/stable/sysupgrade',
-	  'http://freifunk.tobi042.de/firmware-lux/stable/sysupgrade',
-          'http://[fd4e:f2d7:88d2:fffe::2]/firmware-lux/stable/sysupgrade',
+          'http://static.services.ffsaar/firmware-luxembourg/stable/sysupgrade',
+	  'http://freifunk.tobi042.de/firmware-luxembourg/stable/sysupgrade',
+          'http://[fd4e:f2d7:88d2:fffe::2]/firmware-luxembourg/stable/sysupgrade',
         },
 
         -- Number of good signatures required.
@@ -142,9 +142,9 @@
 
         -- List of mirrors to fetch images from. IPv6 required!
         mirrors = {
-          'http://static.services.ffsaar/firmware-lux/beta/sysupgrade',
-          'http://freifunk.tobi042.de/firmware-lux/beta/sysupgrade',
-          'http://[fd4e:f2d7:88d2:fffe::2]/firmware-lux/beta/sysupgrade',
+          'http://static.services.ffsaar/firmware-luxembourg/beta/sysupgrade',
+          'http://freifunk.tobi042.de/firmware-luxembourg/beta/sysupgrade',
+          'http://[fd4e:f2d7:88d2:fffe::2]/firmware-luxembourg/beta/sysupgrade',
         },
 
         -- Number of good signatures required.
@@ -165,9 +165,9 @@
 
         -- List of mirrors to fetch images from. IPv6 required!
         mirrors = {
-          'http://static.services.ffsaar/firmware-lux/experimental/sysupgrade',
-          'http://freifunk.tobi042.de/firmware-lux/experimental/sysupgrade',
-          'http://[fd4e:f2d7:88d2:fffe::2]/firmware-lux/experimental/sysupgrade',
+          'http://static.services.ffsaar/firmware-luxembourg/experimental/sysupgrade',
+          'http://freifunk.tobi042.de/firmware-luxembourg/experimental/sysupgrade',
+          'http://[fd4e:f2d7:88d2:fffe::2]/firmware-luxembourg/experimental/sysupgrade',
         },
 
         -- Number of good signatures required.
