--- a/site.conf
+++ b/site.conf
@@ -247,7 +247,7 @@ er auf den Servern des Freifunk Saar-Projektes eingetragen wurde,
 kann sich dein Knoten mit dem saarländischen Mesh-VPN verbinden. Bitte
 schicke dazu diesen Schlüssel und den Namen deines Knotens
 (<em><%=hostname%></em>) an
-<a href="mailto:freifunk-vpn@saar.freifunk.net?subject=Neuer Freifunk Saar-Knoten <%=hostname%>&body=Folgender Freifunk-Knoten wurde eingerichtet und wartet auf seine Freischaltung: <%=hostname%>, öffentlicher VPN-Schlüssel: <%=pubkey%>">freifunk-vpn@saar.freifunk.net</a>.
+<a href="mailto:freifunk-vpn@saar.freifunk.net?Subject=Neuer%20Freifunk%20Saar-Knoten%20<%=hostname%>&Body=Folgender%20Freifunk-Knoten%20wurde%20eingerichtet%20und%20wartet%20auf%20seine%20Freischaltung%3A%20%0A%0A%23%20<%=hostname%>%0Akey%20%22<%=pubkey%>%22%3B">freifunk-vpn@saar.freifunk.net</a>.
 Falls du uns deinen Key schon geschickt hast und diese Seite nur angezeigt 
 bekommst weil du deinen Knoten gerade im Config Mode gestartet hast brauchst
 du uns deinen Schlüssel natürlich nicht nochmal zu schicken.
